Despliegue jobhub-api

--- a/src/main/resources/templates/email/password-reset-template.html
+++ b/src/main/resources/templates/email/password-reset-template.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <meta charset="UTF-8" />
-    <title>Confirmación de Solicitud</title>
+    <title>Restablecer contraseña</title>
     <style>
         /* GLOBAL STYLES */
         body {
@@ -117,27 +117,23 @@
             <div class="content">
 
                 <!-- Header -->
-                <h1>¡Gracias por postular al trabajo!</h1>
+                <h1>Restablecer Contraseña</h1>
                 <p>Hola, <span th:text="${user}"></span></p>
-                <p>Tu solicitud para el puesto <strong><span th:text="${jobTitle}"></span></strong> ha sido confirmada. Aquí tienes los detalles:</p>
+                <p>Hemos recibido una solicitud para restablecer tu contraseña. Haz clic en el botón a continuación para restablecerla:</p>
 
-                <!-- Application Details -->
-                <p><strong>Empresa:</strong> <span th:text="${companyName}"></span></p>
-                <p><strong>Fecha de solicitud:</strong> <span th:text="${applicationDate}"></span></p>
-
-                <!-- Button to View Application -->
+                <!-- Button -->
                 <div class="btn-primary">
-                    <a th:href="${applicationUrl}">Ver Detalles de la Solicitud</a>
+                    <a th:href="${resetUrl}">Restablecer Contraseña</a>
                 </div>
 
-                <p>Te mantendremos informado sobre el progreso de tu solicitud. ¡Buena suerte!</p>
-                <p>Atentamente,<br/> El equipo de JobHub</p>
+                <p>Si no solicitaste este cambio, puedes ignorar este correo.</p>
+                <p>Gracias, <br/> El equipo de BookHub</p>
 
                 <!-- Footer -->
                 <div class="footer">
                     <p>Lima, Perú</p>
                     <p>
-                        <a href="http://htmlemail.io">© 2024 JobHub</a>.
+                        <a href="http://htmlemail.io">© 2024 BookHub</a>.
                     </p>
                 </div>
 
